Better layout of edges to prevent overlap.

--- a/assets/styles/authoring/flowchart.scss
+++ b/assets/styles/authoring/flowchart.scss
@@ -323,9 +323,11 @@ $font-family-sans-serif: var(--font-sans);
     height: 30px;
     text-align: center;
     vertical-align: middle;
+    background-color: #b9d7a1;
+    opacity: 0.1;
 
     &.hover {
-      background-color: #b9d7a1;
+      opacity: 1;
       box-shadow: 0px 0px 40px 20px #0ff;
     }
   }
